# uva-machine-learning-25f-projects

./: .gitignore  README.md
team-01/src/: README.md
team-11/: .gitignore  Dockerfile  Dockerfile.api  README.md  creditprediction.py  docker-compose.yml  pyproject.toml  requirements.txt
team-11/.runtime-home/.cache/fontconfig/: 00d5189c1d5ced4af9bb23cbaa9b1e94-le64.cache-9
team-11/.runtime-home/.matplotlib/: fontlist-v390.json
team-11/config/: __init__.py  config.py  default_config.yaml
team-11/grafana/: README.md  docker-compose.yml
team-11/grafana/dashboards/: calibration.json  data_quality.json  fairness_metrics.json  model_performance.json
team-11/grafana/prometheus/: alert_rules.yml  alertmanager.yml  prometheus.yml
team-11/grafana/provisioning/dashboards/: dashboards.yaml
team-11/models/: credit_model.pkl  preprocessor.pkl
team-11/monitoring/: alerts.yml  prometheus.yml
team-11/outputs/: benchmark_results.json  metrics.json
team-11/readme/: AB_TESTING_GUIDE.md  CALIBRATION_GUIDE.md  CREDITPREDICTION_SCRIPT_IMPROVEMENTS.md  DEPLOYMENT.md  IMPROVEMENTS_ROADMAP.md  LOCAL_DEVELOPMENT.md  MASTER-PROJECT-PLAN.md  PRODUCTION_INFERENCE.md  RUN.md  TUNING_GUIDE.md  masterimprove.md  version-a-project-roadmap.md  version-b-todo.md  version-c-project-plan.md  version-master-project-plan.md
team-11/scripts/: __init__.py  analyze_data_quality.py  benchmark_models.py  compare_model_versions.py  generate_sample_data.py  run_local.py  run_local.sh  tune_hyperparameters.py
team-11/src/: __init__.py  api.py  data_loader.py  explainability.py  fairness.py  main.py  model.py  model_registry.py  preprocessing.py  protected_attribute.py  protocols.py  utils.py  validators.py
team-11/tests/: __init__.py  conftest.py  test_config.py  test_explainability.py  test_fairness.py  test_integration.py  test_model.py  test_preprocessing.py  test_protected_attribute.py  test_validators.py
team-11/utils/: serialization.py
team-12/: README.md  requirements.txt
team-12/src/: analysis.ipynb  llm_relevance_cache.sqlite  model_training.ipynb
team-15/data/: README.md  requirements.txt
team-15/src/: mlproject.ipynb
team-16/: README.md  requirements.txt
team-16/data/: data.md
team-16/src/: CreditCardFraudDetection.ipynb
team-19/: README.md
team-19/data/: sources.md
team-19/src/: .env.example  .gitignore  index.html  main.js  mcp-server-standalone.ts  package-lock.json  package.json  tsconfig.mcp.json  vite.config.ts
team-2/: README.md
team-20/doc/: YoutubeLink.txt
team-20/src/: ML_Final.ipynb
team-21/: README.md  requirements.txt
team-21/src/: ML_Image_Colorization.ipynb
team-25/: README.md  requirements.txt
team-25/data/: data.txt
team-25/src/: Drunk_Sober_Identification.ipynb
team-27/: README.md  requirements.txt
team-5/: .gitignore  README.md
(+58 files in other folders)
